# Autonomous-Multi-Agent-Stock-Research-System

./: README.md
agentic_stock_analysis/: README.md  main.py  pyproject.toml
agentic_stock_analysis/config/: agents.yaml  tasks.yaml
agentic_stock_analysis/reports/: daily_stock_report_2025-12-19.md  daily_stock_report_2025-12-22.md  daily_stock_report_2025-12-28.md  daily_stock_report_2026-01-02.md  daily_stock_report_2026-01-06.md
agentic_stock_analysis/src/agentic_stock_analysis/: crew.py  main.py
agentic_stock_analysis/src/agentic_stock_analysis/config/: agents.yaml  tasks.yaml
agentic_stock_analysis/src/agentic_stock_analysis/tools/: __init__.py  stock_fundamentals_tool.py  stock_news_search_tool.py  stock_prediction_tool.py
agentic_stock_analysis/tools/: __init__.py  stock_fundamentals_tool.py  stock_news_search_tool.py  stock_prediction_tool.py
reports/: daily_stock_report_2025-12-21.md
